--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>R&B</title>
 </head>
 <body>
-    <footer>
+    <header>
         <h1>Ritmo y Blues (R&B)</h1>
         <img src="images/r&b.jpg">
-    </footer>
+    </header>
     <main>
         <p>El R&B, o "Rhythm and Blues", es un género musical que combina ritmos de jazz, blues y gospel, creando un sonido emocional y rítmico que ha influido en la música popular a nivel mundial. En este sitio exploraremos la historia del R&B, sus principales exponentes y su impacto en la cultura musical.</p>
         <section>
